test/fail/type_error/print_wrong_number_of_format_arguments.amla
func main() int {
     print("%v + %v = %v", 1, 2);
}